# myclip

./: .gitignore  CLAUDE.md  MyClip.spec  README.md  install.sh  pyproject.toml  requirements.txt  run_myclip.sh  setup_app.py
resources/: MyClip.icns
scripts/: create_icon.py  myclip_app.py
src/myclip/: __init__.py  __main__.py  app.py  config.py  user_config.py  version.py
src/myclip/clipboard/: __init__.py  history.py  monitor.py
src/myclip/hotkeys/: manager.py
src/myclip/ui/: __init__.py  popup.py  popup_runner.py  tray.py
